--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,34 +1,84 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="height:100%;" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel = "icon" href = "https://www.vban.vn/Resources/images/logo.svg" type = "image/x-icon">
     <title>Products</title>
     <style>
         i {
             cursor: pointer;
         }
+        * {
+            font-size: 0.93rem;
+        }
+        body {
+            --table-width: 100%; /* Or any value, this will change dinamically */
+        }
+        tbody {
+            display:block;
+            max-height:500px;
+            overflow-y:auto;
+        }
+        thead, tbody tr {
+            display:table;
+            width: var(--table-width);
+            table-layout:fixed;
+        }
     </style>
 </head>
-<body>
+<body class="d-flex flex-column h-100">
 
-  <nav class="navbar navbar-light bg-light">
-      <div class="container-fluid">
-          <a class="navbar-brand" href="#">
-              <img src="/docs/5.0/assets/brand/bootstrap-logo.svg" alt="" width="30" height="24" class="d-inline-block align-text-top">
-              Products
-          </a>
-      </div>
+  <nav class="navbar navbar-light mb-2 row" style="background-color: #e3f2fd;">
+        <div class="col-10">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="/products">
+                    <img src="https://www.vban.vn/Resources/images/logo.svg" alt="" width="50" class="d-inline-block align-text-top">
+                        VNPay Shop
+                </a>
+            </div>
+        </div>
+        <div class="col-2 text-center">
+            <div th:if="${nameOfUser == null}">
+                <a href="/login" th:href="@{/login}" class="btn btn-link">Sign In</a>
+            </div>
+            <div th:if="${nameOfUser != null}">
+                <div class="flex-shrink-0 dropdown">
+                    <span th:text="${nameOfUser}"></span>
+                    <a href="#" class="d-inline link-dark text-decoration-none dropdown-toggle" id="dropdownUser2" data-bs-toggle="dropdown" aria-expanded="false">
+                        <img th:src="${imgUrl}" alt="mdo" width="32" height="32" class="rounded-circle">
+                    </a>
+                    <ul class="dropdown-menu text-small shadow" aria-labelledby="dropdownUser2">
+                        <li><a class="dropdown-item" href="#">Settings</a></li>
+                        <li><a class="dropdown-item" href="#">Profile</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" href="#">Sign out</a></li>
+                    </ul>
+                </div>
+            </div> 
+        </div>
+   
   </nav>
 
-  <div class="row">
-        <div class="col-4">
+  <div class="container-fluid pb-3">
+      <div class="d-grid gap-3" style="grid-template-columns: 1fr 2fr;">
+        <div class="bg-light border rounded-3">
             <div class="container">
-                <form method="POST" th:action="@{/products/update}" th:object="${product}">
+                <form class="mt-2 mb-2" method="POST" th:action="@{/product/update}" th:object="${product}">
                     <div class="mb-3">
                         <label for="id" class="form-label">Product ID</label>
-                        <input type="text" class="form-control" id="id" field="*{id}" name="id">
+                        <select onchange="getProductById(this)" class="form-select" required aria-label="Id of products" id="id" field="*{id}" name="id">
+                            <!-- <option selected value="0">Select product id</option> -->
+                            <div th:each="product: ${products}">
+                                <option th:value="${product.id}" th:text="${product.id}">
+                            </div>
+                        </select>
+                        <div th:if="${updateProductSuccess == false}">
+                            <div class="alert alert-danger" role="alert" id="error">
+                                Product ID is invalid!
+                            </div>
+                        </div>
                     </div>
                     <div class="mb-3">
                         <label for="productName" class="form-label">Product Name</label>
@@ -40,75 +90,164 @@
                     </div>
                     <div class="mb-3">
                         <label for="prize" class="form-label">Product Prize</label>
-                        <input class="form-control" required id="prize" rows="3" field="*{prize}" name="prize">
+                        <input class="form-control" type="number" min="0" required id="prize" rows="3" field="*{prize}" name="prize">
                     </div>
                     <div class="mb-3">
                         <label for="url" class="form-label">Product URL</label>
                         <input class="form-control" id="url" rows="3" field="*{url}" name="url">
                     </div>
-                    <button type="submit" class="btn btn-success">Update</button>
+                    <div th:if="${nameOfUser != null}">
+                        <button type="submit" class="btn btn-outline-info">Update</button>
+                    </div>
                 </form>
             </div>
         </div>
-        <div class="col-8">
-            <table class="table table-hover">
+        <div class="bg-light border rounded-3">
+            <div class="container mt-2 mb-2">
+                <div th:if="${nameOfUser != null}">
+                    <button type="submit" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#new-product">
+                        <i class="fa fa-plus"></i>
+                    </button>
+                </div>
+            <div class="table-responsive">
+            <table class="table table-hover" style="margin-bottom: 0">
                 <thead>
                     <tr>
-                        <th scope="col">Product ID</th>
-                        <th scope="col">Product Name</th>
-                        <th scope="col">Description</th>
-                        <th scope="col">Prize</th>
-                        <th scope="col">URL</th>
-                        <th scope="col">Action</th>
+                        <th class="text-center" scope="col">Product ID</th>
+                        <th class="text-center" scope="col">Product Name</th>
+                        <th class="text-center" scope="col">Description</th>
+                        <th class="text-center" scope="col">Prize</th>
+                        <th class="text-center" scope="col">Photo</th>
+                        <div th:if="${nameOfUser != null}">
+                            <th class="text-center" scope="col">Action</th>
+                        </div>
                     </tr>
                 </thead>
           
                 <tbody>
                     <tr th:each="product: ${products}" onclick="selectProduct(this)">
-                        <th th:text="${product.id}" scope="row" />
-                        <td th:text="${product.productName}" />
-                        <td th:text="${product.description}" />
-                        <td th:text="${product.prize}" />
-                        <td th:text="${product.url}" />
-                        <td>
-                            <i type="button" class="fa fa-trash" style="color: red;" data-bs-toggle="modal" th:data-bs-target="|#userModal${product.id}|"></i>
-                            <!-- Modal -->
-                            <div class="modal fade" th:id="|userModal${product.id}|" tabindex="-1" aria-labelledby="delete-productLabel" aria-hidden="true">
-                                <div class="modal-dialog">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                        <h5 class="modal-title" id="delete-productLabel">Delete Products</h5>
-                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                        </div>
-                                        <div class="modal-body">
-                                        Are you sure to delete <strong th:text="${product.productName}"></strong>
-                                        </div>
-                                        <div class="modal-footer">
-                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                        <form method="POST" th:action="@{'/products/delete/{id}'(id=${product.id})}">
-                                            <button type="submit" class="btn btn-danger">Force Delete</button>
-                                        </form>
+                        <th th:text="${product.id}" scope="row" class="text-center">
+                        <td th:text="${product.productName}" class="text-center">
+                        <td th:text="${product.description}" class="justify-content-center">
+                        <td th:text="${'$' + product.prize}" class="text-center">
+                        <td class="text-center"><img th:src="${product.url}" th:alt="${product.productName}" height="50"></td>
+                        <div th:if="${nameOfUser != null}">
+                            <td class="text-center">
+                                <i type="button" class="fa fa-trash" style="color: red; font-size: 18px;" data-bs-toggle="modal" th:data-bs-target="|#userModal${product.id}|"></i>
+                                <!-- Modal -->
+                                <div class="modal fade" th:id="|userModal${product.id}|" tabindex="-1" aria-labelledby="delete-productLabel" aria-hidden="true">
+                                    <div class="modal-dialog">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                            <h5 class="modal-title" id="delete-productLabel">Delete Products</h5>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                            </div>
+                                            <div class="modal-body">
+                                            Are you sure to delete <strong th:text="${product.productName}"></strong>
+                                            </div>
+                                            <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                            <form method="POST" th:action="@{'/product/delete/{id}'(id=${product.id})}">
+                                                <button type="submit" class="btn btn-danger">Force Delete</button>
+                                            </form>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                        </td>                        
+                            </td>
+                        </div>                        
                     </tr>
                 </tbody>
-          
             </table>
+            </div>
+            </div>
         </div>
+      </div>
   </div>
+
+  <!-- Modal New Product -->
+  <div class="modal fade" id="new-product" tabindex="-1" aria-labelledby="newProductLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="newProductLabel">Create New Product</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+                <div class="modal-body">
+                    <form method="POST" th:action="@{/product}" th:object="${product}">
+                        <div class="mb-3">
+                            <label for="productName" class="form-label">Product Name</label>
+                            <input class="form-control" required id="productName" rows="3" field="*{productName}" name="productName">
+                        </div>
+                        <div class="mb-3">
+                            <label for="description" class="form-label">Product Description</label>
+                            <textarea class="form-control" id="description" rows="3" field="*{description}" name="description"></textarea>
+                        </div>
+                        <div class="mb-3">
+                            <label for="prize" class="form-label">Product Prize</label>
+                            <input class="form-control" type="number" min="0" required id="prize" rows="3" field="*{prize}" name="prize">
+                        </div>
+                        <div class="mb-3">
+                            <label for="url" class="form-label">Product URL</label>
+                            <input class="form-control" id="url" rows="3" field="*{url}" name="url">
+                        </div>
+                        <div class="d-grid">
+                            <button type="submit" class="btn btn-success btn-block">Add Product</button>
+                        </div>
+                    </form>
+                </div>
+        </div>
+    </div>
+</div>
+
+<!-- Footer -->
+<footer class="footer py-3" style="background-color: #e3f2fd;">
+    <div class="text-center">
+        © Made by Luu Van Cui
+    </div>
+</footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   <script>
       function selectProduct(element) {
         const collection = element.children;
-        document.getElementById("id").value = collection[0].innerHTML;
-        document.getElementById("productName").value = collection[1].innerHTML;
-        document.getElementById("description").value = collection[2].innerHTML;
-        document.getElementById("prize").value = collection[3].innerHTML;
-        document.getElementById("url").value = collection[4].innerHTML;
+        const product = {
+            id: collection[0].innerHTML,
+            productName: collection[1].innerHTML,
+            description: collection[2].innerHTML,
+            prize: collection[3].innerHTML.substring(1),
+            url: collection[4].childNodes[0].getAttribute('src')
+        }
+        fillValueToProductForm(product);
+      }
+
+      async function getProductById(selectEl) {
+        const productId = selectEl.value;
+        console.log(productId);
+        if (productId === '0') {
+            document.getElementById("productName").value = "";
+            document.getElementById("description").value = "";
+            document.getElementById("prize").value = "";
+            document.getElementById("url").value = "";
+            return;
+        } else {
+            try {
+                const response = await fetch(`http://${location.host}/productbyid/${productId}`);
+                const jsonData = await response.json();
+                const data = jsonData.data;
+                fillValueToProductForm(data);
+            } catch (error) {
+                console.log(error);
+            }
+        }
+      }
+
+      function fillValueToProductForm(product) {
+        document.getElementById("id").value = product.id;
+        document.getElementById("productName").value = product.productName;
+        document.getElementById("description").value = product.description;
+        document.getElementById("prize").value = product.prize;
+        document.getElementById("url").value = product.url;
       }
   </script>
 </body>
