--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -53,7 +53,7 @@
                         <li><a class="dropdown-item" href="#">Settings</a></li>
                         <li><a class="dropdown-item" href="#">Profile</a></li>
                         <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Sign out</a></li>
+                        <li><a class="dropdown-item" onclick="logout()">Sign out</a></li>
                     </ul>
                 </div>
             </div> 
@@ -248,6 +248,11 @@
         document.getElementById("description").value = product.description;
         document.getElementById("prize").value = product.prize;
         document.getElementById("url").value = product.url;
+      }
+
+      function logout() {
+        document.cookie = "access_token=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;";
+        location.href = `http://${location.host}/products`;
       }
   </script>
 </body>
